--- a/genindex.html
+++ b/genindex.html
@@ -501,14 +501,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.n">n() (flight_mech.plane.Plane method)</a>
 </li>
+      <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.naca_airfoil_generator">naca_airfoil_generator() (in module flight_mech.airfoil)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.name">name (flight_mech.airfoil.Airfoil attribute)</a>
 
       <ul>
         <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.name">(flight_mech.wing.Wing attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.nb_engines">nb_engines (flight_mech.plane.Plane attribute)</a>
 </li>
   </ul></td>
