deploy: 053917e1b7e5ff755799bcd175f77790c2820fff

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <li><p><strong>wing</strong> : allows to define the geometry of a wing and compute the lift and drag coefficients.</p></li>
 <li><p><strong>fuel</strong> : defines several types of broadly used fuels in aeronautics.</p></li>
 <li><p><strong>turbine</strong> : allows to define several types of turbine to compute their thrust and consumption at various operating conditions.</p></li>
+<li><p><strong>motor</strong> : allows to define an electric motor model and compute its outputs.</p></li>
 <li><p><strong>plane</strong> : allows to define a numerical plane model, binding the previous modules, to compute its flight characteristics.</p></li>
 </ul>
 <div class="admonition warning">
