--- a/genindex.html
+++ b/genindex.html
@@ -347,8 +347,6 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.a">a (flight_mech.plane.Plane attribute)</a>
-</li>
       <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.A4_star">A4_star (flight_mech.turbine.TurbojetSingleBody attribute)</a>
 </li>
       <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.A8">A8 (flight_mech.turbine.TurbojetSingleBody property)</a>
@@ -357,19 +355,19 @@
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil">Airfoil (class in flight_mech.airfoil)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_0">alpha_0 (flight_mech.plane.Plane attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_f_max">alpha_f_max (flight_mech.plane.Plane property)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.alpha_stall">alpha_stall (flight_mech.plane.Plane attribute)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.aspect_ratio">aspect_ratio (flight_mech.wing.Wing property)</a>
 </li>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.atm_model">atm_model (flight_mech.plane.Plane attribute)</a>
-</li>
       <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.Atmosphere">Atmosphere (class in flight_mech.atmosphere)</a>
+</li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.atmosphere_model">atmosphere_model (flight_mech.plane.Plane attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -389,8 +387,6 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.c">c (flight_mech.plane.Plane attribute)</a>
-</li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_D">C_D() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.C_D_0">C_D_0 (flight_mech.plane.Plane attribute)</a>
@@ -487,10 +483,10 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_distance">compute_landing_distance() (flight_mech.plane.Plane method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_landing_speed">compute_landing_speed() (flight_mech.plane.Plane method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.compute_lift">compute_lift() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.compute_lift_and_induced_drag_coefficients">compute_lift_and_induced_drag_coefficients() (flight_mech.wing.Wing method)</a>
@@ -993,9 +989,11 @@
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.set_chord_at_zero_incidence">set_chord_at_zero_incidence() (flight_mech.airfoil.Airfoil method)</a>
 </li>
+      <li><a href="flight_mech.motor.html#flight_mech.motor.ElectricalMotor.set_motor_parameters">set_motor_parameters() (flight_mech.motor.ElectricalMotor method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flight_mech.motor.html#flight_mech.motor.ElectricalMotor.set_motor_parameters">set_motor_parameters() (flight_mech.motor.ElectricalMotor method)</a>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.set_plane_parameters">set_plane_parameters() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.single_side_surface">single_side_surface (flight_mech.wing.Wing property)</a>
 </li>
