deploy: a5f1349aafa9aa10a3a21817432f188d08802db2

--- a/_modules/flight_mech/turbine.html
+++ b/_modules/flight_mech/turbine.html
@@ -451,6 +451,10 @@
 <span class="sd">        ----------</span>
 <span class="sd">        variable : Literal[&quot;pressure&quot;, &quot;temperature&quot;, &quot;mass_flow&quot;]</span>
 <span class="sd">            Name of the variable to plot.</span>
+
+<span class="sd">        Note</span>
+<span class="sd">        ----</span>
+<span class="sd">        For more details on the optional arguments, please check flight_mech._common.plot_graph.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="c1"># Extract code of the variable</span>
