--- a/genindex.html
+++ b/genindex.html
@@ -609,9 +609,11 @@
 </li>
       <li><a href="flight_mech.motor.html#flight_mech.motor.ElectricalMotor.electromotive_force">electromotive_force (flight_mech.motor.ElectricalMotor property)</a>
 </li>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.engine_type">engine_type (flight_mech.plane.Plane attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.engine_type">engine_type (flight_mech.plane.Plane attribute)</a>
+      <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.environment_model">environment_model (flight_mech.plane.Plane attribute)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.extension">extension (flight_mech.plane.Plane property)</a>
 </li>
