--- a/_modules/index.html
+++ b/_modules/index.html
@@ -142,6 +142,13 @@
 
 
 <li class="nav-item ">
+  <a class="nav-link nav-internal" href="../examples.html">
+    Examples
+  </a>
+</li>
+
+
+<li class="nav-item ">
   <a class="nav-link nav-internal" href="../api_references.html">
     API references
   </a>
@@ -237,6 +244,13 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../user_guide.html">
     User guide
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="../examples.html">
+    Examples
   </a>
 </li>
 
