--- a/motor_module.html
+++ b/motor_module.html
@@ -51,7 +51,7 @@
     <link rel="icon" href="_static/logo-light.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="API references" href="api_references.html" />
+    <link rel="next" title="Examples" href="examples.html" />
     <link rel="prev" title="Turbine module" href="turbine_module.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -142,6 +142,13 @@
 <li class="nav-item current active">
   <a class="nav-link nav-internal" href="user_guide.html">
     User guide
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="examples.html">
+    Examples
   </a>
 </li>
 
@@ -244,6 +251,13 @@
 <li class="nav-item current active">
   <a class="nav-link nav-internal" href="user_guide.html">
     User guide
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="examples.html">
+    Examples
   </a>
 </li>
 
@@ -404,11 +418,11 @@
       </div>
     </a>
     <a class="right-next"
-       href="api_references.html"
+       href="examples.html"
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">API references</p>
+        <p class="prev-next-title">Examples</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
