--- a/plane_module.html
+++ b/plane_module.html
@@ -145,6 +145,13 @@
 
 
 <li class="nav-item ">
+  <a class="nav-link nav-internal" href="examples.html">
+    Examples
+  </a>
+</li>
+
+
+<li class="nav-item ">
   <a class="nav-link nav-internal" href="api_references.html">
     API references
   </a>
@@ -242,6 +249,13 @@
 <li class="nav-item current active">
   <a class="nav-link nav-internal" href="user_guide.html">
     User guide
+  </a>
+</li>
+
+
+<li class="nav-item ">
+  <a class="nav-link nav-internal" href="examples.html">
+    Examples
   </a>
 </li>
 
